# coopsync_tbb

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  coopsync_tbb.cppm  cppcheck.suppressions  tsan.suppressions
.github/: dependabot.yml
.github/workflows/: coverage.yml  pages.yml  pre-commit.yml  sanitizers.yml  tests.yml
cmake/: CoopSync_TBBConfig.cmake  Sanitizers.cmake  coopsync_tbbConfig.cmake
cmake/downstream/: CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  README.md  main.cpp  my_program
cmake/pkgconfig/: coopsync_tbb.pc.in
docs/: CMakeLists.txt  README.md
include/coopsync_tbb/: atomic_condition.hpp  atomic_flag.hpp  atomic_ref_condition.hpp  barrier.hpp  condition_variable.hpp  coopsync_tbb.hpp  feature_test.hpp  future.hpp  latch.hpp  mutex.hpp  recursive_mutex.hpp  scoped_lock.hpp  semaphore.hpp  shared_mutex.hpp  version.hpp.in
include/coopsync_tbb/cuda/: wait_for.hpp
include/coopsync_tbb/detail/: intrusive_list.hpp  macros.hpp  unique_scoped_lock.hpp  wait_queue.hpp
include/coopsync_tbb/hip/: wait_for.hpp
include/coopsync_tbb/src/: coopsync_tbb.cppm
modules/: coopsync_tbb.cppm
src/: atomic_condition.cpp  atomic_flag.cpp  atomic_ref_condition.cpp  barrier.cpp  condition_variable.cpp  coopsync_tbb.cpp  feature_test.cpp  future.cpp  intrusive_list.cpp  latch.cpp  macros.cpp  mutex.cpp  semaphore.cpp  shared_mutex.cpp  unique_scoped_lock.cpp  version.cpp  wait_queue.cpp
tests/: CMakeLists.txt  atomic_condition_test.cpp  atomic_flag_test.cpp  atomic_ref_condition_test.cpp  barrier_test.cpp  condition_variable_test.cpp  future_test.cpp  intrusive_list_test.cpp  latch_test.cpp  module_test.cpp  mutex_test.cpp  mutex_traits.hpp  recursive_mutex_test.cpp  scoped_lock_test.cpp  semaphore_test.cpp  shared_mutex_test.cpp  unique_scoped_lock_test.cpp
tests/cuda/: CMakeLists.txt  nanospin.cu  nanospin.hpp  wait_for_test.cpp
tests/hip/: CMakeLists.txt  nanospin.hip  nanospin.hpp  wait_for_test.cpp
