find_package(Doxygen REQUIRED)

set(DOXYGEN_PROJECT_NAME "CoopSync for TBB")
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${PROJECT_SOURCE_DIR}/README.md")
set(DOXYGEN_FULL_PATH_NAMES TRUE)
set(DOXYGEN_STRIP_FROM_PATH "${PROJECT_SOURCE_DIR}")
set(DOXYGEN_STRIP_FROM_INC_PATH "${PROJECT_SOURCE_DIR}/include")
set(DOXYGEN_GENERATE_TREEVIEW FALSE)
set(DOXYGEN_DISABLE_INDEX FALSE)
set(DOXYGEN_FULL_SIDEBAR FALSE)
set(DOXYGEN_EXTRACT_STATIC TRUE)
set(DOXYGEN_RECURSIVE TRUE)
set(DOXYGEN_EXCLUDE_PATTERNS "*/detail/*")
set(DOXYGEN_EXCLUDE_SYMBOLS "detail")

doxygen_add_docs(
  coopsync_tbb_docs "${PROJECT_SOURCE_DIR}/include"
  "${CMAKE_CURRENT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/README.md"
  COMMENT "Generating Doxygen pages")
