# SPDX-FileCopyrightText: 2026 CERN
#
# SPDX-License-Identifier: Apache-2.0

find_package(Doxygen REQUIRED)

set(DOXYGEN_PROJECT_NAME "CoopSync for TBB")
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${PROJECT_SOURCE_DIR}/README.md")
set(DOXYGEN_FULL_PATH_NAMES TRUE)
set(DOXYGEN_STRIP_FROM_PATH "${PROJECT_SOURCE_DIR}" "${PROJECT_BINARY_DIR}")
set(DOXYGEN_STRIP_FROM_INC_PATH "${PROJECT_SOURCE_DIR}/include"
                               "${PROJECT_BINARY_DIR}/include")
set(DOXYGEN_GENERATE_TREEVIEW FALSE)
set(DOXYGEN_DISABLE_INDEX FALSE)
set(DOXYGEN_FULL_SIDEBAR FALSE)
set(DOXYGEN_EXTRACT_STATIC TRUE)
set(DOXYGEN_RECURSIVE TRUE)
set(DOXYGEN_EXCLUDE_PATTERNS "*/detail/*")
set(DOXYGEN_EXCLUDE_SYMBOLS "detail")
set(DOXYGEN_ENABLE_PREPROCESSING TRUE)
set(DOXYGEN_MACRO_EXPANSION TRUE)
set(DOXYGEN_EXPAND_ONLY_PREDEF TRUE)
set(DOXYGEN_PREDEFINED "DOXYGEN=1"
                       "COOPSYNC_TBB_NODISCARD=[[nodiscard]]")
set(DOXYGEN_EXTENSION_MAPPING "txt=md")
set(DOXYGEN_HIDE_UNDOC_CLASSES TRUE)

doxygen_add_docs(
  coopsync_tbb_docs "${PROJECT_SOURCE_DIR}/include"
  "${PROJECT_BINARY_DIR}/include"
  "${PROJECT_SOURCE_DIR}/README.md"
  "${PROJECT_SOURCE_DIR}/LICENSES/Apache-2.0.txt"
  COMMENT "Generating Doxygen pages")
